# stream-notification-for-mac

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  test.applescript
regular_execution/: __init__.py  logger.py  main.py  stream_status.py
regular_execution/applescript/: launch_terminal.applescript  notfound  notification  notification.applescript
regular_execution/twitch/: __init__.py  twitch.py
src/: __init__.py  enums.py  main.py  stream_notification.py  stream_status.py  terminal.py
src/applescript/: close_terminal.applescript  dialog.applescript  launch_terminal.applescript  notification.applescript  starting_dialog.applescript
src/constants/: __init__.py  app_constant.py  constant.py  strict_constant.py
src/twitch/: __init__.py  twitch.py
src/utils/: __init__.py  base_path.py  logger.py  validators.py
