[project]
name = "stream_notification"
version = "0.0.1"
description = ""
authors = [
    { name = "HaGaTa_", email = "hagatasdelus@gmail.com" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.1"
requests = "2.32.1"
python-dotenv = "1.0.1"
greenlet = "3.0.3"
ruff = "^0.6.5"
mypy = "^1.11.2"
nuitka = "^2.4.10"
zstandard = "^0.23.0"
aiohttp = "^3.10.10"

# https://mypy.readthedocs.io/en/stable/config_file.html
prompt-toolkit = "^3.0.48"
inquirerpy = "^0.3.4"

[tool.poetry.group.dev.dependencies]

[tool.mypy]
python_version = "3.11"
show_error_context = true
show_column_numbers = true
disallow_untyped_defs = false
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = [
    'requests',
    'requests.exceptions',
]
ignore_missing_imports = true

[tool.ruff]
line-length = 120

# Option Settings

lint.select = ["ALL"]

lint.ignore = [
    "D",
    "ANN",
    "UP",
    "PTH",
    "RUF",
    "N818",
    "SLF001",
    "E731",
    "ARG005",
    "PGH003",
]

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint.per-file-ignores]

# https://docs.astral.sh/ruff/settings/#lint_per-file-ignores
"*.py" = [
    "ANN101",
    "ANN102",
    "COM812",
    "ERA001",
    "FBT001",
    "FBT002",
    "INP001",
    "PT009",
    "PTH207",
    "S311",
    "S603",
    "T201",
    "TRY002",
    "TRY300",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
